# cardinal-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  application.cpp  build.sh  cardinal.cpp  cardinal.h  dev
.github/workflows/: codeql.yml
Cardinal/: Core.cpp  Core.hpp
Cardinal/Component/Connection/: DataTransferObject.cpp  DataTransferObject.hpp  EndUserClientConnection.cpp  EndUserClientConnection.hpp
Cardinal/Component/Event/: Registry.cpp  Registry.hpp
Cardinal/Component/EventMap/: EventMap.cpp  EventMap.hpp  MemoryEvent.cpp  MemoryEvent.hpp
Cardinal/Component/Message/: Receive.cpp  Receive.hpp  Send.cpp  Send.hpp
Cardinal/Component/User/: Player.cpp  Player.hpp
Cardinal/Entity/: AbstractEntity.cpp  AbstractEntity.h  EventEntity.hpp  Message.hpp  PlayerEntity.cpp  PlayerEntity.hpp  RedisConfig.h  UserEntity.cpp  UserEntity.hpp
Cardinal/Entity/Extension/: SerializableObject.hpp
Cardinal/Event/: AbstractEvent.cpp  AbstractEvent.hpp  TestEvent.h  TestEvent.hpp
Cardinal/Event/Player/: Movement.cpp  Movement.hpp
Cardinal/Exception/: AbstractException.h  AccountNotFound.h  CharacterNotFound.h  ClientConnectionNotFound.h  EntityPropertyNotFound.h  EntityPropertyNotWritable.h  InvalidMessage.h  InvalidOrMissingEvent.h  NoRedisConfigException.h  TCPSocketBindException.h  TCPSocketCreationException.h  TCPSocketListenException.h
Cardinal/Factory/: AbstractFactory.hpp
Cardinal/Factory/Event/: EventFactory.hpp
Cardinal/Global/: DI.cpp  DI.hpp  Physics.hpp  Queue.cpp  Queue.hpp  Utility.hpp
Cardinal/Global/Physics/: Quaternion.hpp  Vector3.hpp
Cardinal/Global/Physics/Collider/: AbstractCollider.hpp  BoxCollider.hpp
Cardinal/Service/: CommunicationService.hpp  EventListenerService.h  LogService.hpp  MemoryService.hpp  MessageService.hpp  ObjectIdentityService.h  RedisClient.cpp  RedisClient.h  Services.hpp  StorageService.hpp  UserService.cpp  UserService.hpp
Cardinal/Service/Communication/: TCPClient.cpp  TCPClient.hpp
Cardinal/Service/Log/: LogClient.cpp  LogClient.hpp
Cardinal/Service/Memory/: Redis.cpp  Redis.hpp  RedisCacheClient.cpp  RedisCacheClient.hpp
Cardinal/Service/Message/: MessageClient.cpp  MessageClient.hpp  RedisMessageClient.cpp  RedisMessageClient.hpp
Cardinal/Service/Storage/: MySQLStorageClient.cpp  MySQLStorageClient.hpp  RedisStackStorage.cpp  RedisStackStorage.hpp
Docker/: docker-compose.yml
Docker/CompileLinux/: Dockerfile
Docker/GameServer/: Dockerfile
Docker/Redis/: Dockerfile
Docker/Worker/: Dockerfile
Entity/: AbstractEntity.cpp  AbstractEntity.h  Config.h  Event.h  PlayerEntity.cpp  PlayerEntity.hpp  RedisConfig.h  UserEntity.cpp  UserEntity.hpp
Event/: AbstractEvent.h  EventMap.h  Events.h  TestEvent.h
Exception/: AbstractException.h  AccountNotFound.h  CharacterNotFound.h  ClientConnectionNotFound.h  EntityPropertyNotFound.h  EntityPropertyNotWritable.h  Exceptions.h  InvalidMessage.h  InvalidOrMissingEvent.h  NoRedisConfigException.h  TCPSocketCreationException.h  TCPSocketListenException.h
Service/: EventListenerService.h  EventMapService.cpp  EventMapService.hpp  LogService.cpp  LogService.h  MessageService.cpp  MessageService.h  ObjectIdentityService.cpp  ObjectIdentityService.h  RedisClient.cpp  RedisClient.h  Services.h  TCPListenerService.cpp  TCPListenerService.h  UserService.cpp  UserService.hpp
UnitTests/: CMakeLists.txt  main.cpp
UnitTests/Tests/Component/Connection/: DataTransferObjectTest.cpp
UnitTests/Tests/Component/Event/: RegistryTest.cpp
UnitTests/Tests/Component/EventMap/: EventMapTest.cpp  MemoryEventTest.cpp
UnitTests/Tests/Entity/: EventEntityTest.cpp  MessageEntityTest.cpp  PlayerEntityTest.cpp  UserEntityTest.cpp
UnitTests/Tests/Global/Physics/: Vector3Test.cpp
